--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -60,8 +60,8 @@
       <div id="SOHUCS" sid="{{ page.url }}"></div>
       <script type="text/javascript">
       (function(){
-        var appid = 'cyrQPfEd5';
-        var conf = '6d39b373e0fa44eed17fc5e251dcdaff';
+        var appid = 'cyt5SWKOt';
+        var conf = 'a6f4b0f40bef10d0a5bc44b25902b88e';
         if (window.screen.width < 960) {
           window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>');
         } else {
